--- a/upload-app/src/index.html
+++ b/upload-app/src/index.html
@@ -34,24 +34,24 @@
 
     <!-- Mobile tab toggle -->
     <div class="tab-toggle">
-      <button class="tab-btn active" data-tab="receipts">
-        Receipts <span id="receiptBadge" class="badge"></span>
-      </button>
-      <button class="tab-btn" data-tab="claims">
+      <button class="tab-btn active" data-tab="claims">
         Claims <span id="claimBadge" class="badge"></span>
+      </button>
+      <button class="tab-btn" data-tab="receipts">
+        Receipts <span id="receiptBadge" class="badge"></span>
       </button>
     </div>
 
     <!-- Two-column layout for linking -->
     <div class="linking-container">
-      <div class="list-column active" id="receiptsColumn">
-        <h2>Pending Receipts <span id="count">(0)</span></h2>
-        <ul id="receiptList" class="receipt-list"></ul>
-      </div>
-
-      <div class="list-column" id="claimsColumn">
+      <div class="list-column active" id="claimsColumn">
         <h2>Pending Claims <span id="todoCount">(0)</span></h2>
         <ul id="todoList" class="todo-list"></ul>
+      </div>
+
+      <div class="list-column" id="receiptsColumn">
+        <h2>Pending Receipts <span id="count">(0)</span></h2>
+        <ul id="receiptList" class="receipt-list"></ul>
       </div>
     </div>
   </div>
@@ -59,7 +59,10 @@
   <!-- Linking action bar -->
   <div id="actionBar" class="action-bar">
     <span id="actionText">Select a claim to link</span>
-    <button id="cancelSelection" class="btn-secondary">Cancel</button>
+    <div class="action-buttons">
+      <button id="confirmSelection" class="btn-primary" hidden>Link selected</button>
+      <button id="cancelSelection" class="btn-secondary">Cancel</button>
+    </div>
   </div>
 
   <!-- Receipt Preview Modal -->
