feat: separate outstanding and linked claim-receipt sections

--- a/upload-app/src/index.html
+++ b/upload-app/src/index.html
@@ -45,14 +45,19 @@
     <!-- Two-column layout for linking -->
     <div class="linking-container">
       <div class="list-column active" id="claimsColumn">
-        <h2>Pending Claims <span id="todoCount">(0)</span></h2>
+        <h2>Outstanding Claims <span id="todoCount">(0)</span></h2>
         <ul id="todoList" class="todo-list"></ul>
       </div>
 
       <div class="list-column" id="receiptsColumn">
-        <h2>Pending Receipts <span id="count">(0)</span></h2>
+        <h2>Outstanding Receipts <span id="count">(0)</span></h2>
         <ul id="receiptList" class="receipt-list"></ul>
       </div>
+    </div>
+
+    <div class="linked-section">
+      <h2>Already Linked <span id="linkedCount">(0)</span></h2>
+      <ul id="linkedList" class="linked-pair-list"></ul>
     </div>
   </div>
 
